SUBDIRS = . songio

if USE_GCONF
GCONF_SETTINGS_C_FILES = gconf-settings.c
GCONF_SETTINGS_H_FILES = gconf-settings.h
else
GCONF_SETTINGS_C_FILES =
GCONF_SETTINGS_H_FILES =
endif

# these sources (also mentioned above) are generated.
BUILT_SOURCES = marshal.h marshal.c

lib_LTLIBRARIES = libbuzztard-core.la
libbuzztard_core_la_LIBADD = \
	$(top_builddir)/src/lib/ic/libbuzztard-ic.la \
	$(BASE_DEPS_LIBS) $(BT_LIBS) $(LIBM) \
	-lgstaudio-@GST_MAJORMINOR@ -lgstpbutils-@GST_MAJORMINOR@
libbuzztard_core_la_LDFLAGS = \
	$(BT_LDFLAGS) \
	-export-symbols-regex ^_?\(bt_\|Bt\|BT_\).* \
	-version-info @BT_VERSION_INFO@
libbuzztard_core_la_SOURCES = \
	core.c \
	tools.c \
	buzzcallbacks.c \
	\
	application.c \
	audio-session.c \
	childproxy.c \
	cmd-pattern.c \
	$(GCONF_SETTINGS_C_FILES) \
	machine.c \
	parameter-group.c \
	pattern.c \
	persistence.c \
	processor-machine.c \
	sequence.c \
	settings.c \
	setup.c \
	sink-bin.c \
	sink-machine.c \
	song.c \
	song-info.c \
	song-io.c \
	song-io-native.c \
	song-io-native-bzt.c \
	song-io-native-xml.c \
	source-machine.c \
	value-group.c \
	wavetable.c \
	wave.c \
	wavelevel.c \
	wire.c \
	wire-pattern.c \
	\
  $(BUILT_SOURCES)

# yet unused sources
#	plainfile-settings.c libbuzztard-core/plainfile-settings.h \
#

libbuzztard_core_la_CFLAGS = \
	-I$(builddir)/libbuzztard-core \
	-I$(top_srcdir)/src/lib/ic \
	-DLOCALEDIR=\"$(localedir)\" \
	-DLIBDIR=\"$(libdir)\" \
	-DDATADIR=\"$(datadir)\" \
	-DG_LOG_DOMAIN=\"buzztard\" \
	$(BASE_DEPS_CFLAGS) \
	$(BT_CFLAGS)

noinst_HEADERS = \
  core_private.h marshal.h \
  settings-private.h

libbuzztard_coredir = $(includedir)/libbuzztard-core
libbuzztard_core_HEADERS = \
	core.h \
	tools.h \
	version.h \
	\
	application.h \
	audio-session.h \
	childproxy.h \
	cmd-pattern.h \
	$(GCONF_SETTINGS_H_FILES) \
	machine.h \
	parameter-group.h \
	pattern.h \
	persistence.h \
	plainfile-settings.h \
	processor-machine.h \
	sequence.h \
	settings.h \
	setup.h \
	sink-bin.h \
	sink-machine.h \
	song.h \
	song-info.h \
	song-io.h \
	song-io-native.h \
	song-io-native-bzt.h \
	song-io-native-xml.h \
	source-machine.h \
	value-group.h \
	wavetable.h \
	wave.h \
	wavelevel.h \
	wire.h \
	wire-pattern.h

# yet unused sources
#	plainfile-settings.h \
#


pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libbuzztard-core.pc

marshal.h: marshal.list
	glib-genmarshal --header --prefix=bt_marshal $(srcdir)/marshal.list > marshal.h

marshal.c: marshal.list
	glib-genmarshal --body --prefix=bt_marshal $(srcdir)/marshal.list > marshal.c

if USE_GIR

gir_sources=$(patsubst %,$(srcdir)/%, $(libbuzztard_core_la_SOURCES))

BuzztardCore-0.0.gir: $(G_IR_SCANNER) libbuzztard-core.la
	-$(AM_V_GEN)$(G_IR_SCANNER) -v \
	     --namespace=BuzztardCore \
	     --nsversion 0.0 \
	     -I$(builddir) \
	     -I$(srcdir) \
	     -I$(top_srcdir)/src/lib/ic/ \
	     --add-include-path=$(top_srcdir)/src/lib/ic/ \
	     --identifier-prefix=Bt \
	     --symbol-prefix=bt \
	     --c-include='core.h' \
	     --include=GLib-2.0 \
	     --include=GObject-2.0 \
	     --include=Gst-@GST_MAJORMINOR@ \
	     --include=libxml2-2.0 \
	     --include=BuzztardIc-0.0 \
	     --library=libbuzztard-core.la \
	     --libtool="$(top_builddir)/libtool" \
	     --pkg glib-2.0 \
	     --pkg gobject-2.0 \
	     --pkg libgstbuzztard \
	     --pkg libxml-2.0 \
	     --pkg gstreamer-@GST_MAJORMINOR@ \
	     --pkg-export libbuzztard-core \
	     --add-init-section="bt_init(NULL,NULL);" \
	     --output $@ \
	     $(gir_sources) || touch $@
BUILT_GIRSOURCES = BuzztardCore-0.0.gir

girdir = $(datadir)/gir
dist_gir_DATA = $(BUILT_GIRSOURCES)

typelibsdir = $(libdir)/girepository
typelibs_DATA = $(dist_gir_DATA:.gir=.typelib)

TXML = $(dist_gir_DATA:.gir=.gir.txml)

.gir.typelib:
	-$(AM_V_GEN)$(G_IR_COMPILER) --includedir=. --includedir=../ic $(G_IR_COMPILER_OPTS) $< -o $@ || touch $@
else
BUILT_GIRSOURCES=
endif

EXTRA_DIST = \
	libbuzztard-core.pc.in \
	marshal.list \
	version.h.in

# CLEANFILES is for files generated by make
CLEANFILES = marshal.c marshal.h \
  $(typelibs_DATA) $(TXML) \
  $(BUILT_GIRSOURCES)

# DISTCLEANFILES is for files generated by configure
DISTCLEANFILES = \
  $(pkgconfig_DATA) \
  version.h

include $(top_srcdir)/common.mak
