SUBDIRS = libbuzztard-ic

if USE_LINUX_INPUT
LINUX_INPUT_FILES=input-device.c libbuzztard-ic/input-device.h
else
LINUX_INPUT_FILES=
endif

if USE_GUDEV
GUDEV_FILES=gudev-discoverer.c libbuzztard-ic/gudev-discoverer.h
else
GUDEV_FILES=
endif

if USE_HAL
HAL_FILES=hal-discoverer.c libbuzztard-ic/hal-discoverer.h
else
HAL_FILES=
endif

lib_LTLIBRARIES = libbuzztard-ic.la
libbuzztard_ic_la_LIBADD = \
	$(BASE_DEPS_LIBS) $(BT_LIBS) $(LIBM)
libbuzztard_ic_la_LDFLAGS = \
	$(BT_LDFLAGS) \
	-export-symbols-regex ^_?\(btic_\|BtIc\|BTIC_\).* \
	-version-info @BT_VERSION_INFO@
libbuzztard_ic_la_SOURCES = \
	ic.c libbuzztard-ic/ic.h \
	registry.c libbuzztard-ic/registry.h \
	$(GUDEV_FILES) $(HAL_FILES) \
	\
	device.c libbuzztard-ic/device.h \
	learn.c libbuzztard-ic/learn.h \
	$(LINUX_INPUT_FILES) \
	midi-device.c libbuzztard-ic/midi-device.h \
	\
	control.c libbuzztard-ic/control.h \
	abs-range-control.c libbuzztard-ic/abs-range-control.h  \
	trigger-control.c libbuzztard-ic/trigger-control.h
libbuzztard_ic_la_CFLAGS = \
	-I$(builddir)/libbuzztard-ic \
	-I$(top_srcdir)/src/lib/core \
	-DLOCALEDIR=\"$(localedir)\" \
	-DLIBDIR=\"$(libdir)\" \
	-DDATADIR=\"$(datadir)\" \
	-DG_LOG_DOMAIN=\"buzztard\" \
	$(BASE_DEPS_CFLAGS) \
	$(BT_CFLAGS)

noinst_HEADERS = ic_private.h libbuzztard-ic/version.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libbuzztard-ic.pc

if USE_GIR

gir_sources=$(patsubst %,$(srcdir)/%, $(libbuzztard_ic_la_SOURCES))

BuzztardIc-0.0.gir: $(G_IR_SCANNER) libbuzztard-ic.la
	-$(AM_V_GEN)$(G_IR_SCANNER) -v \
	     --namespace=BuzztardIc \
	     --nsversion 0.0 \
	     -I$(builddir)/libbuzztard-ic \
	     -I$(srcdir) \
	     -I$(srcdir)/libbuzztard-ic/ \
	     --identifier-prefix=BtIc \
	     --symbol-prefix=btic \
	     --c-include='libbuzztard-ic/ic.h' \
	     --include=GLib-2.0 \
	     --include=GObject-2.0 \
	     --include=Gst-0.10 \
	     --library=libbuzztard-ic.la \
	     --libtool="$(top_builddir)/libtool" \
	     --pkg glib-2.0 \
	     --pkg gobject-2.0 \
	     --pkg gstreamer-0.10 \
	     --pkg-export libbuzztard-ic \
	     --add-init-section="btic_init(NULL,NULL);" \
	     --output $@ \
	     $(gir_sources) || touch $@
BUILT_GIRSOURCES = BuzztardIc-0.0.gir

girdir = $(datadir)/gir
dist_gir_DATA = $(BUILT_GIRSOURCES)

typelibsdir = $(libdir)/girepository
typelibs_DATA = $(dist_gir_DATA:.gir=.typelib)

TXML = $(dist_gir_DATA:.gir=.gir.txml)

.gir.typelib:
	-$(AM_V_GEN)$(G_IR_COMPILER) --includedir=. $(G_IR_COMPILER_OPTS) $< -o $@  || touch $@
else
BUILT_GIRSOURCES=
endif

EXTRA_DIST = \
	libbuzztard-ic.pc.in

# CLEANFILES is for files generated by make
CLEANFILES = \
  $(pkgconfig_DATA) \
  $(typelibs_DATA) $(TXML) \
  $(BUILT_GIRSOURCES)

include $(top_srcdir)/common.mak
