if USE_LINUX_INPUT
LINUX_INPUT_C_FILES=input-device.c
LINUX_INPUT_H_FILES=input-device.h
else
LINUX_INPUT_C_FILES=
LINUX_INPUT_H_FILES=
endif

if USE_GUDEV
GUDEV_C_FILES=gudev-discoverer.c
GUDEV_H_FILES=gudev-discoverer.h
else
GUDEV_C_FILES=
GUDEV_H_FILES=
endif

if USE_HAL
HAL_C_FILES=hal-discoverer.c
HAL_H_FILES=hal-discoverer.h
else
HAL_C_FILES=
HAL_H_FILES=
endif

lib_LTLIBRARIES = libbuzztard-ic.la
libbuzztard_ic_la_LIBADD = \
	$(BASE_DEPS_LIBS) $(BT_LIBS) $(LIBM)
libbuzztard_ic_la_LDFLAGS = \
	$(BT_LDFLAGS) \
	-export-symbols-regex ^_?\(btic_\|BtIc\|BTIC_\).* \
	-version-info @BT_VERSION_INFO@
libbuzztard_ic_la_SOURCES = \
	ic.c \
	registry.c\
	$(GUDEV_C_FILES) $(HAL_C_FILES) \
	\
	device.c \
	learn.c \
	$(LINUX_INPUT_C_FILES) \
	midi-device.c \
	\
	control.c \
	abs-range-control.c \
	trigger-control.c
libbuzztard_ic_la_CFLAGS = \
	-I$(builddir)/libbuzztard-ic \
	-I$(top_srcdir)/src/lib/core \
	-DLOCALEDIR=\"$(localedir)\" \
	-DLIBDIR=\"$(libdir)\" \
	-DDATADIR=\"$(datadir)\" \
	-DG_LOG_DOMAIN=\"buzztard\" \
	$(BASE_DEPS_CFLAGS) \
	$(BT_CFLAGS)

noinst_HEADERS = version.h

libbtcoredir = $(includedir)/libbuzztard-ic
libbtcore_HEADERS = \
	ic.h \
	version.h \
	registry.h \
	$(GUDEV_SOURCES) $(HAL_SOURCES) \
	\
	device.h \
	learn.h \
	$(LINUX_INPUT_SOURCES) \
	midi-device.h \
	\
	control.h \
	abs-range-control.h \
	trigger-control.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libbuzztard-ic.pc

if USE_GIR

gir_sources=$(patsubst %,$(srcdir)/%, $(libbuzztard_ic_la_SOURCES))

BuzztardIc-0.0.gir: $(G_IR_SCANNER) libbuzztard-ic.la
	-$(AM_V_GEN)$(G_IR_SCANNER) -v \
	     --namespace=BuzztardIc \
	     --nsversion 0.0 \
	     -I$(builddir)/libbuzztard-ic \
	     -I$(srcdir) \
	     -I$(srcdir)/libbuzztard-ic/ \
	     --identifier-prefix=BtIc \
	     --symbol-prefix=btic \
	     --c-include='libbuzztard-ic/ic.h' \
	     --include=GLib-2.0 \
	     --include=GObject-2.0 \
	     --include=Gst-0.10 \
	     --library=libbuzztard-ic.la \
	     --libtool="$(top_builddir)/libtool" \
	     --pkg glib-2.0 \
	     --pkg gobject-2.0 \
	     --pkg gstreamer-0.10 \
	     --pkg-export libbuzztard-ic \
	     --add-init-section="btic_init(NULL,NULL);" \
	     --output $@ \
	     $(gir_sources) || touch $@
BUILT_GIRSOURCES = BuzztardIc-0.0.gir

girdir = $(datadir)/gir
dist_gir_DATA = $(BUILT_GIRSOURCES)

typelibsdir = $(libdir)/girepository
typelibs_DATA = $(dist_gir_DATA:.gir=.typelib)

TXML = $(dist_gir_DATA:.gir=.gir.txml)

.gir.typelib:
	-$(AM_V_GEN)$(G_IR_COMPILER) --includedir=. $(G_IR_COMPILER_OPTS) $< -o $@  || touch $@
else
BUILT_GIRSOURCES=
endif

EXTRA_DIST = \
	libbuzztard-ic.pc.in \
	version.h.in

# CLEANFILES is for files generated by make
CLEANFILES = \
  $(typelibs_DATA) $(TXML) \
  $(BUILT_GIRSOURCES)

# DISTCLEANFILES is for files generated by configure
DISTCLEANFILES = \
  $(pkgconfig_DATA) \
  version.h

include $(top_srcdir)/common.mak
